--- a/node-mongo/package.json
+++ b/node-mongo/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "node-express",
+  "name": "node-mongo",
   "version": "1.0.0",
-  "description": "Node express example",
+  "description": "Examples mongo",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index"
   },
-  "author": "Pankaj",
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "express": "^4.16.3",
-    "morgan": "^1.9.0"
+    "assert": "^1.4.1",
+    "mongodb": "^3.0.10"
   }
 }
